# notify-send

./: .gitignore  LICENSE  MANIFEST.in  README.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
docs/: api.md  index.md
notify/: __init__.py  notification.py
notify/linux/: __init__.py  notify.py
notify/win32/: __init__.py  balloontip.py  notify.py
tests/: test_notification.py
