[tool.poetry]
name = "notify-send"
version = "0.0.16"
description = "Displays a notification suitable for the platform being run on."
authors = ["André P. Santos <andreztz@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreztz/notify-send"
keywords = ["alert", "notification", "notify-send", "message", "toast"]
packages = [
    { include = "notify" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.8"
pypiwin32 = { version = "223", markers = "sys_platform == 'win32'" }
pywin32 = { version = "228", markers = "sys_platform == 'win32'" }
pycairo = { version = "^1.18.1", markers = "sys_platform == 'linux'" }
PyGObject = { version = "^3.34.0", markers = "sys_platform == 'linux'" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
